{
    "name": "JoiningActionMap",
    "maps": [
        {
            "name": "JoinGame",
            "id": "8a2900aa-c7dc-4cb3-8132-347c7546d85c",
            "actions": [
                {
                    "name": "JoinGame",
                    "type": "Button",
                    "id": "8fd9be90-5166-4094-96e7-28bd5d1a11f2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "aef546c8-cbc7-4cf0-a111-efa8d878991c",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "Xinput",
                    "action": "JoinGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "27a3828f-0beb-48a2-ad5d-edcdc520a00f",
                    "path": "<Keyboard>/enter",
                    "interactions": "",
                    "processors": "",
                    "groups": "KBM",
                    "action": "JoinGame",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KBM",
            "bindingGroup": "KBM",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "Xinput",
            "bindingGroup": "Xinput",
            "devices": [
                {
                    "devicePath": "<XInputController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}